--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
-    "@mui/styled-engine-sc": "^5.14.10",
+    "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spring": "^9.7.2",
-    "styled-components": "^6.0.8"
+    "react-type-animation": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.22",
